frontend/resources/styles/main/partials/sidebar-element-options.scss
/* ... */
.element-set-content {
  display: flex;
  flex-direction: column;
  padding: $size-1;
  width: 100%;

  .input-text {
    background-color: $color-gray-50;
    border: 1px solid transparent;
    border-bottom-color: $color-gray-40;
    color: $color-white;
    font-size: $fs12;
    margin: $size-1;
    min-width: 0;
    padding: $size-1;
    width: 100%;

    &:focus {
      color: lighten($color-gray-10, 8%);
      border-color: $color-primary !important;
    }

    &:hover {
      border-color: $color-gray-40;
    }

    &.error {
      border-color: $color-danger;
    }

    &[disabled] {
      color: $color-gray-30;
    }
  }

  .input-select {
    color: $color-gray-10;

    &:focus {
      color: lighten($color-gray-10, 8%);
      border-color: $color-primary;
    }

    option {
      color: $color-gray-60;
      background: $color-white;
      font-size: $fs12;

      &:disabled {
        color: $color-gray-20;
      }
    }
  }

  .input-checkbox {
    label {
      color: $color-gray-20;
    }

    label::before {
      background-color: transparent;
      width: 16px;
      height: 16px;
    }

    label::after {
      width: 16px;
      height: 16px;
    }

    input:checked + label::before {
      border-width: 1px;
    }

    input:checked + label::after {
      font-size: 0.8rem;
    }
  }

  .element-set-subtitle {
    color: $color-gray-20;
    font-size: $fs12;
    width: 64px;

    &.wide {
      min-width: 75px;
    }
  }

  .lock-size {
    cursor: pointer;
    margin: auto;

    svg {
      fill: $color-gray-20;
      height: 14px;
      width: 14px;

      &:hover {
        fill: $color-primary;
      }
    }

    &.selected {
      svg {
        fill: $color-primary;
      }
    }

    &.disabled {
      cursor: unset;
      svg {
        fill: $color-gray-40;
      }
    }
  }

  .save-btn {
    width: 100%;
  }

  .cancel-btn {
    color: $color-danger;
    text-align: center;
    width: 100%;
  }

  .custom-select {
    border: 1px solid $color-gray-40;
    border-radius: $br-small;
    cursor: pointer;
    padding: $size-1 $size-5 $size-1 $size-1;
    position: relative;

    .dropdown-button {
      position: absolute;
      right: $size-1;
      top: 7px;

      svg {
        fill: $color-gray-40;
        height: 10px;
        width: 10px;
      }
    }

    span {
      font-size: $fs12;
    }

    &:hover {
      border: 1px solid $color-gray-20;
    }
  }
  .opened {
    border: 1px solid $color-primary;
    &:hover,
    &:focus {
      outline: none;
      border: 1px solid $color-primary;
    }
  }

  .custom-select-dropdown {
    background-color: $color-white;
    border-radius: $br-small;
    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.25);
    left: 0;
    max-height: 30rem;
    min-width: 7rem;
    position: absolute;
    overflow-y: auto;
    top: 30px;
    z-index: 12;

    .presets {
      width: 200px;
    }

    hr {
      margin: 0;
      border-color: $color-gray-20;
    }

    li {
      color: $color-gray-60;
      cursor: pointer;
      font-size: $fs14;
      display: flex;
      padding: $size-2;

      span {
        color: $color-gray-20;
        margin-left: auto;
      }

      &.dropdown-separator:not(:last-child) {
        border-bottom: 1px solid $color-gray-10;
      }

      &.dropdown-label:not(:first-child) {
        border-top: 1px solid $color-gray-10;
      }

      &.dropdown-label span {
        margin-left: 0;
      }

      &:hover {
        background-color: $color-primary-lighter;
      }
    }
  }

  & li.checked-element {
    padding-left: 0;
    display: flex;
    justify-content: space-around;

    & span {
      margin: 0;
      color: $color-black;
    }

    & svg {
      visibility: hidden;
      width: 8px;
      height: 8px;
      background: none;
      margin: 0.25rem;
      fill: $color-black;
    }

    &.is-selected {
      & svg {
        visibility: visible;
      }
    }
  }

  .editable-select {
    border: 1px solid transparent;
    position: relative;
    height: 38px;
    // margin-left: $size-2;
    max-height: 30px;
    position: relative;
    width: 60%;

    svg {
      fill: $color-gray-10;
      height: 10px;
      width: 10px;
    }

    .input-text {
      left: 0;
      position: absolute;
      top: -1px;
      width: 60%;
    }

    input.input-text {
      border: none;
      background: none;
    }

    .input-select {
      background-color: transparent;
      border: none;
      border-bottom: 1px solid $color-gray-40;
      color: transparent;
      left: 0;
      position: absolute;
      top: 0;
      width: 100%;

      option {
        color: $color-gray-60;
        background: $color-white;
        font-size: $fs12;

        &:disabled {
          color: $color-gray-20;
        }
      }
    }

    .dropdown-button {
      position: absolute;
      right: 0;
      padding-right: 4px;
      height: 100%;
      display: flex;
      align-items: center;
    }

    &.input-option {
      height: 26px;
      border-bottom: 1px solid #64666a;
      width: 100%;
      margin-left: 0.25rem;

      .input-text {
        border: none;
        margin: 0;
        width: calc(100% - 12px);
        height: 100%;
        top: auto;
        color: $color-white;
      }
    }

    .custom-select-dropdown {
      top: unset;
      margin-bottom: 0;
    }

    &:hover {
      border: 1px solid $color-gray-40;
    }
  }
}

.element-set-content .border-data {
  &[draggable="true"] {
    cursor: pointer;
  }
}

.element-set-content .grid-option-main {
  .editable-select {
    height: 2rem;
  }
  .editable-select svg {
    fill: $color-gray-40;
  }
  .editable-select.input-option .input-text {
    padding: 0;
    padding-top: 0.18rem;
    padding-left: 0.25rem;
  }

  .input-element {
    width: 55px;
    margin: 0 0.2rem;
  }

  .input-text {
    padding-left: 0;
    color: $color-white;
    background-color: transparent;
    height: 30px;
  }
}
/* ... */

